structural: replace Collectors.toList() with Stream.toList() in MovieRepositoryCustomImpl
Only one of the four planned sites could use Stream.toList() — the other
three (MovieService, TMDBMovieProvider) require Collectors.toList() for
wildcard generic type inference compatibility.